--- a/cn.zh-CN/运维与监控/事件通知/事件通知列表/块存储事件通知.md
+++ b/cn.zh-CN/运维与监控/事件通知/事件通知列表/块存储事件通知.md
@@ -173,7 +173,7 @@ content字段解释：
 -   因账号没有实名认证或账号余额不足100元人民币
 -   账户欠费导致按量付费块存储被释放
 
-**说明：** 阿里云提供延停权益，即当按量付费的资源发生欠费后，提供一定额度或时长继续使用云服务的权益。延停期间正常计费。延停的权益额度不是欠费总额的上限。您延停的额度或时长根据您账号的官网等级（L）、历史消费情况等因素，每个月自动计算并更新。更多信息，请参见[延期免停权益](https://help.aliyun.com/document_detail/190777.html)。
+**说明：** 阿里云提供延停权益，即当按量付费的资源发生欠费后，提供一定额度或时长继续使用云服务的权益。延停期间正常计费。延停的权益额度不是欠费总额的上限。您延停的额度或时长根据您在阿里云的历史消费等因素，每个月自动计算并更新。更多信息，请参见[延期免停权益](https://help.aliyun.com/document_detail/190777.html)。
 
 事件通知的JSON格式如下所示。
 
