--- a/cn.zh-CN/运维与监控/云助手/使用云助手/立即执行命令.md
+++ b/cn.zh-CN/运维与监控/云助手/使用云助手/立即执行命令.md
@@ -7,11 +7,11 @@ keyword: [云助手, 远程命令, ecs, aliyun, 运维]
 通过立即执行命令，您可以同时创建命令和执行命令。
 
 -   实例的状态必须为**运行中**（Running）。
--   在一个阿里云地域下，您可以保存100条云助手命令，配额随您的云服务器使用情况可能会增加。 在立即执行命令时，如果您**仅执行**命令，则不占用100条云助手命令配额。
+-   在一个阿里云地域下，您可以保存100条云助手命令，配额随您的云服务器使用情况可能会增加。 关于如何查询配额，请参见[步骤一：查看资源配额](/cn.zh-CN/标签与资源/资源/权益配额/查看和提升资源配额.md)。在立即执行命令时，如果您**仅执行**命令，则不占用云助手命令配额。
 
     **说明：** 您也可以调用API DescribeAccountAttributes，将参数AttributeName.N设置为max-axt-command-count，查询一个地域中云助手命令配额。
 
--   在一个阿里云地域下，您每天最多能执行5000次云助手命令，配额随您的云服务器使用情况可能会增加。
+-   在一个阿里云地域下，您每天最多能执行5000次云助手命令，配额随您的云服务器使用情况可能会增加。关于如何查询配额，请参见[步骤一：查看资源配额](/cn.zh-CN/标签与资源/资源/权益配额/查看和提升资源配额.md)。
 
     **说明：** 您也可以调用API DescribeAccountAttributes，将参数AttributeName.N设置为max-axt-invocation-daily，查询一个地域下单天能运行的云助手命令次数上限。
 
@@ -49,13 +49,18 @@ keyword: [云助手, 远程命令, ecs, aliyun, 运维]
     |名称|描述|
     |--|--|
     |命令来源|选择命令来源。    -   **输入命令内容**：创建一个新命令。
-    -   **选择已有命令**：选择已创建的命令。 |
+    -   **选择已保存的命令**：选择已创建的命令。 |
     |命令名称|设置命令名称。|
+    |执行计划|选择命令执行时间。    -   **立即执行**：单击**执行**或**执行并保存**后，立即执行命令。
+    -   **系统下一次启动后**：单击**执行**或**执行并保存**后，实例下次启动时执行命令。
+    -   **系统每次启动后**：单击**执行**或**执行并保存**后，实例每次启动时执行命令。 |
     |命令类型|选择命令类型。    -   Linux：选择**Shell**。
     -   Windows：选择**Bat**或者**Power Shell**。 |
     |命令内容|编辑或者粘贴您的命令。有关Shell命令的示例，请参见[查看实例系统配置](/cn.zh-CN/运维与监控/云助手/DevOps自动化运维实践/查看实例系统配置.md)。 |
     |使用参数|选择是否启用参数。如果您开启了**使用参数**功能，在**命令内容**中以`{{key}}`格式设置自定义参数。 |
-    |命令参数|设置**命令内容**中`{{key}}`自定义参数的取值。仅在开启了**使用参数**功能后可设置此参数。 |
+    |命令参数|设置**命令内容**中`{{key}}`自定义参数的取值。仅在开启了**使用参数**功能后可设置此参数。
+
+**说明：** 如果需要在云助手中使用运维编排服务的参数仓库，请参见[在云助手命令中使用OOS参数仓库](/cn.zh-CN/运维与监控/云助手/DevOps自动化运维实践/在云助手命令中使用OOS参数仓库.md)。 |
     |命令描述|设置命令的描述信息。建议设置命令用途等信息，方便后续管理维护。|
     |执行用户|在ECS实例中执行命令的用户名称。使用最小权限执行命令是权限管理的最佳实践，建议您以普通用户身份执行云助手命令。更多信息，请参见[设置普通用户执行云助手命令](/cn.zh-CN/运维与监控/云助手/DevOps自动化运维实践/设置普通用户执行云助手命令.md)。
 
@@ -67,7 +72,7 @@ keyword: [云助手, 远程命令, ecs, aliyun, 运维]
 
 6.  在**选择实例**和**选择托管实例**区域，选中需要执行命令的目标实例。
 
-    **说明：** 托管实例是云助手托管的非阿里云服务器，目前仅支持华北2（北京）、华东1（杭州）、华东2（上海）三个地域。更多信息，请参见[托管非阿里云服务器](/cn.zh-CN/运维与监控/云助手/配置云助手客户端/托管非阿里云服务器.md)。
+    **说明：** 托管实例是云助手托管的非阿里云服务器，更多信息，请参见[混合云托管服务器](/cn.zh-CN/运维与监控/云助手/混合云托管服务器.md)。
 
 7.  单击**执行并保存**或**执行**。
 
@@ -76,28 +81,30 @@ keyword: [云助手, 远程命令, ecs, aliyun, 运维]
 
 -   请求示例：
 
-    调用RunCommand接口创建一份名为update的云助手命令，为实例进行系统更新。
+    调用RunCommand接口创建一个名为update的云助手命令，为实例进行系统更新。
 
     ```
     aliyun ecs RunCommand --RegionId 'cn-hangzhou' \
-    --Name 'update' \
-    --Type 'RunShellScript' \
-    --CommandContent 'eXVtIHVwZGF0ZSAteQ==' \
-    --Timeout '60' \
-    --ContentEncoding 'Base64' \
-    --InstanceId.1 'i-bp1f4f6o8lv0wqof****'
+    --Name 'update' --Username 'root' --Type 'RunShellScript' \
+    --CommandContent 'eXVtIC15IHVwZGF0ZQ==' \
+    --Timeout '60' --RepeatMode 'Once' --ContentEncoding 'Base64' \
+    --InstanceId.1 'i-bp12e0ib2ztibede****'
     ```
+
+    **说明：** 半角单引号（''）内为参数的示例取值，您需要根据实际情况修改。
 
     |名称|示例|描述|
     |--|--|--|
     |RegionId|cn-hangzhou|地域ID。|
     |Name|update|命令名称。|
+    |Username|root|在ECS实例中执行命令的用户名称。|
     |Type|RunShellScript|命令类型。    -   Linux：RunShellScript
     -   Windows：RunBatScript或者RunPowershellScript |
     |CommandContent|eXVtIHVwZGF0ZSAteQ==|通过Base64编码后的命令内容。|
     |Timeout|60|超时时间。|
+    |RepeatMode|Once|执行计划。|
     |ContentEncoding|Base64|编码方式。|
-    |InstanceId.1|i-bp1f4f6o8lv0wqof\*\*\*\*|需要执行命令的实例ID。|
+    |InstanceId.1|i-bp12e0ib2ztibede\*\*\*\*|需要执行命令的实例ID。|
 
     更多信息，请参见[RunCommand](/cn.zh-CN/API参考/云助手/RunCommand.md)。
 
