--- a/intl.zh-CN/运维与监控/云助手/使用云助手/创建命令.md
+++ b/intl.zh-CN/运维与监控/云助手/使用云助手/创建命令.md
@@ -6,7 +6,7 @@ keyword: [云助手, 远程命令, ecs, aliyun, 运维]
 
 云助手命令可以在ECS实例中快速完成运行自动化运维脚本、轮询进程、重置用户密码、安装或者卸载软件、更新应用以及安装补丁等一些日常任务。命令类型可以是Windows PowerShell脚本、Bat批处理命令和Linux Shell脚本，命令中支持自定义参数，方便设置变量值。
 
--   在一个阿里云地域下，您可以保有100条云助手命令，配额随您的云服务器使用情况可能会增加。
+-   在一个阿里云地域下，您可以保存100条云助手命令，配额随您的云服务器使用情况可能会增加。 关于如何查询配额，请参见[步骤一：查看资源配额](/intl.zh-CN/标签与资源/资源/权益配额/查看和提升资源配额.md)。在立即执行命令时，如果您**仅执行**命令，则不占用云助手命令配额。
 
     **说明：** 您也可以调用API DescribeAccountAttributes，将参数AttributeName.N设置为max-axt-command-count，查询一个地域中云助手命令配额。
 
@@ -40,13 +40,18 @@ keyword: [云助手, 远程命令, ecs, aliyun, 运维]
     |名称|描述|
     |--|--|
     |命令来源|选择命令来源。    -   **输入命令内容**：创建一个新命令。
-    -   **选择已有命令**：选择已创建的命令。 |
+    -   **选择已保存的命令**：选择已创建的命令。 |
     |命令名称|设置命令名称。|
+    |执行计划|选择命令执行时间。    -   **立即执行**：单击**执行**或**执行并保存**后，立即执行命令。
+    -   **系统下一次启动后**：单击**执行**或**执行并保存**后，实例下次启动时执行命令。
+    -   **系统每次启动后**：单击**执行**或**执行并保存**后，实例每次启动时执行命令。 |
     |命令类型|选择命令类型。    -   Linux：选择**Shell**。
     -   Windows：选择**Bat**或者**Power Shell**。 |
     |命令内容|编辑或者粘贴您的命令。有关Shell命令的示例，请参见[查看实例系统配置](/intl.zh-CN/运维与监控/云助手/DevOps自动化运维实践/查看实例系统配置.md)。 |
     |使用参数|选择是否启用参数。如果您开启了**使用参数**功能，在**命令内容**中以`{{key}}`格式设置自定义参数。 |
-    |命令参数|设置**命令内容**中`{{key}}`自定义参数的取值。仅在开启了**使用参数**功能后可设置此参数。 |
+    |命令参数|设置**命令内容**中`{{key}}`自定义参数的取值。仅在开启了**使用参数**功能后可设置此参数。
+
+**说明：** 如果需要在云助手中使用运维编排服务的参数仓库，请参见[在云助手命令中使用OOS参数仓库](/intl.zh-CN/运维与监控/云助手/DevOps自动化运维实践/在云助手命令中使用OOS参数仓库.md)。 |
     |命令描述|设置命令的描述信息。建议设置命令用途等信息，方便后续管理维护。|
     |执行用户|在ECS实例中执行命令的用户名称。使用最小权限执行命令是权限管理的最佳实践，建议您以普通用户身份执行云助手命令。更多信息，请参见[设置普通用户执行云助手命令](/intl.zh-CN/运维与监控/云助手/DevOps自动化运维实践/设置普通用户执行云助手命令.md)。
 
@@ -76,6 +81,8 @@ keyword: [云助手, 远程命令, ecs, aliyun, 运维]
     --output cols=CommandId
     ```
 
+    **说明：** 半角单引号（''）内为参数的示例取值，您需要根据实际情况修改。
+
     |名称|示例|描述|
     |--|--|--|
     |RegionId|cn-hangzhou|地域ID。|
@@ -96,7 +103,7 @@ keyword: [云助手, 远程命令, ecs, aliyun, 运维]
     ```
 
 
-[执行命令](/intl.zh-CN/运维与监控/云助手/使用云助手/执行命令.md)
+创建命令，您可以在**命令列表**页签中查看具体信息。如果需要对指定实例执行此命令，请参见[执行命令](/intl.zh-CN/运维与监控/云助手/使用云助手/执行命令.md)。
 
 **说明：** 如果您创建的命令使用了参数，执行命令时，您需要在**命令参数**栏中填写参数取值。
 
