--- a/intl.zh-CN/实例/选择实例规格/计算型.md
+++ b/intl.zh-CN/实例/选择实例规格/计算型.md
@@ -52,17 +52,17 @@ c7的特点如下：
 
 c7包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|支持vTPM|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|------------|:----------|------|---|:---|-------|---------|------------|
-|ecs.c7.large|2|4.0|突发最高10.0|90|是|2|3|6|突发最高10.0|突发最高6.0|
-|ecs.c7.xlarge|4|8.0|突发最高10.0|100|是|4|4|15|突发最高10.0|突发最高6.0|
-|ecs.c7.2xlarge|8|16.0|突发最高10.0|160|是|8|4|15|突发最高10.0|突发最高6.0|
-|ecs.c7.3xlarge|12|24.0|突发最高10.0|240|是|8|8|15|突发最高10.0|突发最高6.0|
-|ecs.c7.4xlarge|16|32.0|突发最高25.0|300|是|8|8|30|突发最高10.0|突发最高6.0|
-|ecs.c7.6xlarge|24|48.0|突发最高25.0|450|是|12|8|30|10.0|6.0|
-|ecs.c7.8xlarge|32|64.0|突发最高25.0|600|是|16|8|30|15.0|8.0|
-|ecs.c7.16xlarge|64|128.0|32.0|1200|是|32|8|30|30.0|16.0|
-|ecs.c7.32xlarge|128|256.0|64.0|2400|是|32|15|30|60.0|32.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|支持vTPM|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|------------|:-------|------|---|:---|-------|------|------------|
+|ecs.c7.large|2|4.0|突发最高10.0|90万|是|2|3|6|突发最高10.0万|突发最高6.0|
+|ecs.c7.xlarge|4|8.0|突发最高10.0|100万|是|4|4|15|突发最高10.0万|突发最高6.0|
+|ecs.c7.2xlarge|8|16.0|突发最高10.0|160万|是|8|4|15|突发最高10.0万|突发最高6.0|
+|ecs.c7.3xlarge|12|24.0|突发最高10.0|240万|是|8|8|15|突发最高10.0万|突发最高6.0|
+|ecs.c7.4xlarge|16|32.0|突发最高25.0|300万|是|8|8|30|突发最高10.0万|突发最高6.0|
+|ecs.c7.6xlarge|24|48.0|突发最高25.0|450万|是|12|8|30|10.0万|6.0|
+|ecs.c7.8xlarge|32|64.0|突发最高25.0|600万|是|16|8|30|15.0万|8.0|
+|ecs.c7.16xlarge|64|128.0|32.0|1200万|是|32|8|30|30.0万|16.0|
+|ecs.c7.32xlarge|128|256.0|64.0|2400万|是|32|15|30|60.0万|32.0|
 
 **说明：**
 
@@ -102,17 +102,17 @@ c7t的特点如下：
 
 c7t包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|含加密内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|支持vTPM|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|----------|------------|:----------|------|---|:---|-------|---------|------------|
-|ecs.c7t.large|2|4.0|2.0|突发最高10.0|90|是|2|3|6|突发最高10.0|突发最高6.0|
-|ecs.c7t.xlarge|4|8.0|4.0|突发最高10.0|100|是|4|4|15|突发最高10.0|突发最高6.0|
-|ecs.c7t.2xlarge|8|16.0|8.0|突发最高10.0|160|是|8|4|15|突发最高10.0|突发最高6.0|
-|ecs.c7t.3xlarge|12|24.0|12.0|突发最高10.0|240|是|8|8|15|突发最高10.0|突发最高6.0|
-|ecs.c7t.4xlarge|16|32.0|16.0|突发最高25.0|300|是|8|8|30|突发最高10.0|突发最高6.0|
-|ecs.c7t.6xlarge|24|48.0|24.0|突发最高25.0|450|是|12|8|30|10.0|6.0|
-|ecs.c7t.8xlarge|32|64.0|32.0|突发最高25.0|600|是|16|8|30|15.0|8.0|
-|ecs.c7t.16xlarge|64|128.0|64.0|32.0|1200|是|32|8|30|30.0|16.0|
-|ecs.c7t.32xlarge|128|256.0|128.0|64.0|2400|是|32|15|30|60.0|32.0|
+|实例规格|vCPU|内存（GiB）|含加密内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|支持vTPM|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|----------|------------|:-------|------|---|:---|-------|------|------------|
+|ecs.c7t.large|2|4.0|2.0|突发最高10.0|90万|是|2|3|6|突发最高10.0万|突发最高6.0|
+|ecs.c7t.xlarge|4|8.0|4.0|突发最高10.0|100万|是|4|4|15|突发最高10.0万|突发最高6.0|
+|ecs.c7t.2xlarge|8|16.0|8.0|突发最高10.0|160万|是|8|4|15|突发最高10.0万|突发最高6.0|
+|ecs.c7t.3xlarge|12|24.0|12.0|突发最高10.0|240万|是|8|8|15|突发最高10.0万|突发最高6.0|
+|ecs.c7t.4xlarge|16|32.0|16.0|突发最高25.0|300万|是|8|8|30|突发最高10.0万|突发最高6.0|
+|ecs.c7t.6xlarge|24|48.0|24.0|突发最高25.0|450万|是|12|8|30|10.0万|6.0|
+|ecs.c7t.8xlarge|32|64.0|32.0|突发最高25.0|600万|是|16|8|30|15.0万|8.0|
+|ecs.c7t.16xlarge|64|128.0|64.0|32.0|1200万|是|32|8|30|30.0万|16.0|
+|ecs.c7t.32xlarge|128|256.0|128.0|64.0|2400万|是|32|15|30|60.0万|32.0|
 
 **说明：**
 
@@ -153,16 +153,16 @@ c6a的特点如下：
 
 c6a包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|弹性网卡|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|--------------|--------------|:----------|:---|---------|------------|
-|ecs.c6a.large|2|4.0|1.0|10.0|90|2|1.25|1.0|
-|ecs.c6a.xlarge|4|8.0|1.5|10.0|100|3|2.0|1.5|
-|ecs.c6a.2xlarge|8|16.0|2.5|10.0|160|4|3.0|2.0|
-|ecs.c6a.4xlarge|16|32.0|5.0|10.0|200|8|6.0|3.0|
-|ecs.c6a.8xlarge|32|64.0|8.0|10.0|300|7|7.5|4,0|
-|ecs.c6a.16xlarge|64|128.0|16.0|无|600|8|15.0|8.0|
-|ecs.c6a.32xlarge|128|256.0|32.0|无|1200|15|30.0|16.0|
-|ecs.c6a.64xlarge|256|512.0|64.0|无|2400|15|60.0|32.0|
+|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|弹性网卡|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|--------------|--------------|:-------|:---|------|------------|
+|ecs.c6a.large|2|4.0|1.0|10.0|90万|2|1.25万|1.0|
+|ecs.c6a.xlarge|4|8.0|1.5|10.0|100万|3|2.0万|1.5|
+|ecs.c6a.2xlarge|8|16.0|2.5|10.0|160万|4|3.0万|2.0|
+|ecs.c6a.4xlarge|16|32.0|5.0|10.0|200万|8|6.0万|3.0|
+|ecs.c6a.8xlarge|32|64.0|8.0|10.0|300万|7|7.5万|4,0|
+|ecs.c6a.16xlarge|64|128.0|16.0|无|600万|8|15.0万|8.0|
+|ecs.c6a.32xlarge|128|256.0|32.0|无|1200万|15|30.0万|16.0|
+|ecs.c6a.64xlarge|256|512.0|64.0|无|2400万|15|60.0万|32.0|
 
 **说明：**
 
@@ -205,15 +205,15 @@ c6t的特点如下：
 
 c6t包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|支持vTPM|连接数（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|------------|:----------|------|------|:--|:---|-------|---------|------------|
-|ecs.c6t.large|2|4.0|突发最高10.0|90|是|最高25|2|3|6|2.0|1.0|
-|ecs.c6t.xlarge|4|8.0|突发最高10.0|100|是|最高25|4|4|15|4.0|1.5|
-|ecs.c6t.2xlarge|8|16.0|突发最高10.0|160|是|最高25|8|4|15|5.0|2.0|
-|ecs.c6t.4xlarge|16|32.0|突发最高10.0|300|是|30|8|8|30|8.0|3.0|
-|ecs.c6t.8xlarge|32|64.0|10.0|600|是|60|16|8|30|15.0|5.0|
-|ecs.c6t.13xlarge|52|96.0|16.0|900|是|90|32|7|30|24.0|8.0|
-|ecs.c6t.26xlarge|104|192.0|32.0|2400|是|180|32|15|30|48.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|支持vTPM|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|------------|:-------|------|---|:--|:---|-------|------|------------|
+|ecs.c6t.large|2|4.0|突发最高10.0|90万|是|最高25万|2|3|6|2.0万|1.0|
+|ecs.c6t.xlarge|4|8.0|突发最高10.0|100万|是|最高25万|4|4|15|4.0万|1.5|
+|ecs.c6t.2xlarge|8|16.0|突发最高10.0|160万|是|最高25万|8|4|15|5.0万|2.0|
+|ecs.c6t.4xlarge|16|32.0|突发最高10.0|300万|是|30万|8|8|30|8.0万|3.0|
+|ecs.c6t.8xlarge|32|64.0|10.0|600万|是|60万|16|8|30|15.0万|5.0|
+|ecs.c6t.13xlarge|52|96.0|16.0|900万|是|90万|32|7|30|24.0万|8.0|
+|ecs.c6t.26xlarge|104|192.0|32.0|2400万|是|180万|32|15|30|48.0万|16.0|
 
 **说明：**
 
@@ -256,15 +256,15 @@ c6e的特点如下：
 
 c6e包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|------------|:----------|------|:--|:---|-------|---------|------------|
-|ecs.c6e.large|2|4.0|突发最高10.0|90|最高25|2|3|6|2.0|1.0|
-|ecs.c6e.xlarge|4|8.0|突发最高10.0|100|最高25|4|4|15|4.0|1.5|
-|ecs.c6e.2xlarge|8|16.0|突发最高10.0|160|最高25|8|4|15|5.0|2.0|
-|ecs.c6e.4xlarge|16|32.0|突发最高10.0|300|30|8|8|30|8.0|3.0|
-|ecs.c6e.8xlarge|32|64.0|10.0|600|60|16|8|30|15.0|5.0|
-|ecs.c6e.13xlarge|52|96.0|16.0|900|90|32|7|30|24.0|8.0|
-|ecs.c6e.26xlarge|104|192.0|32.0|2400|180|32|15|30|48.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.c6e.large|2|4.0|突发最高10.0|90万|最高25万|2|3|6|2.0万|1.0|
+|ecs.c6e.xlarge|4|8.0|突发最高10.0|100万|最高25万|4|4|15|4.0万|1.5|
+|ecs.c6e.2xlarge|8|16.0|突发最高10.0|160万|最高25万|8|4|15|5.0万|2.0|
+|ecs.c6e.4xlarge|16|32.0|突发最高10.0|300万|30万|8|8|30|8.0万|3.0|
+|ecs.c6e.8xlarge|32|64.0|10.0|600万|60万|16|8|30|15.0万|5.0|
+|ecs.c6e.13xlarge|52|96.0|16.0|900万|90万|32|7|30|24.0万|8.0|
+|ecs.c6e.26xlarge|104|192.0|32.0|2400万|180万|32|15|30|48.0万|16.0|
 
 **说明：**
 
@@ -308,17 +308,17 @@ c6的特点如下：
 
 c6包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-------------|--------------|:----------|------|:--|:---|-------|---------|------------|
-|ecs.c6.large|2|4.0|1.0|3.0|30|最高25|2|2|6|1.0|1|
-|ecs.c6.xlarge|4|8.0|1.5|5.0|50|最高25|4|3|10|2.0|1.5|
-|ecs.c6.2xlarge|8|16.0|2.5|8.0|80|最高25|8|4|10|2.5|2|
-|ecs.c6.3xlarge|12|24.0|4.0|10.0|90|最高25|8|6|10|3.0|2.5|
-|ecs.c6.4xlarge|16|32.0|5.0|10.0|100|30|8|8|20|4.0|3|
-|ecs.c6.6xlarge|24|48.0|7.5|10.0|150|45|12|8|20|5.0|4|
-|ecs.c6.8xlarge|32|64.0|10.0|无|200|60|16|8|20|6.0|5|
-|ecs.c6.13xlarge|52|96.0|12.5|无|300|90|32|7|20|10.0|8|
-|ecs.c6.26xlarge|104|192.0|25.0|无|600|180|32|15|20|20.0|16|
+|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-------------|--------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.c6.large|2|4.0|1.0|3.0|30万|最高25万|2|2|6|1.0万|1|
+|ecs.c6.xlarge|4|8.0|1.5|5.0|50万|最高25万|4|3|10|2.0万|1.5|
+|ecs.c6.2xlarge|8|16.0|2.5|8.0|80万|最高25万|8|4|10|2.5万|2|
+|ecs.c6.3xlarge|12|24.0|4.0|10.0|90万|最高25万|8|6|10|3.0万|2.5|
+|ecs.c6.4xlarge|16|32.0|5.0|10.0|100万|30万|8|8|20|4.0万|3|
+|ecs.c6.6xlarge|24|48.0|7.5|10.0|150万|45万|12|8|20|5.0万|4|
+|ecs.c6.8xlarge|32|64.0|10.0|无|200万|60万|16|8|20|6.0万|5|
+|ecs.c6.13xlarge|52|96.0|12.5|无|300万|90万|32|7|20|10.0万|8|
+|ecs.c6.26xlarge|104|192.0|25.0|无|600万|180万|32|15|20|20.0万|16|
 
 **说明：**
 
@@ -351,16 +351,16 @@ c5的特点如下：
 
 c5包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:-----------|:----------|:--|:---|-------|
-|ecs.c5.large|2|4.0|1.0|30|2|2|6|
-|ecs.c5.xlarge|4|8.0|1.5|50|2|3|10|
-|ecs.c5.2xlarge|8|16.0|2.5|80|2|4|10|
-|ecs.c5.3xlarge|12|24.0|4.0|90|4|6|10|
-|ecs.c5.4xlarge|16|32.0|5.0|100|4|8|20|
-|ecs.c5.6xlarge|24|48.0|7.5|150|6|8|20|
-|ecs.c5.8xlarge|32|64.0|10.0|200|8|8|20|
-|ecs.c5.16xlarge|64|128.0|20.0|400|16|8|20|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|
+|ecs.c5.large|2|4.0|1.0|30万|2|2|6|
+|ecs.c5.xlarge|4|8.0|1.5|50万|2|3|10|
+|ecs.c5.2xlarge|8|16.0|2.5|80万|2|4|10|
+|ecs.c5.3xlarge|12|24.0|4.0|90万|4|6|10|
+|ecs.c5.4xlarge|16|32.0|5.0|100万|4|8|20|
+|ecs.c5.6xlarge|24|48.0|7.5|150万|6|8|20|
+|ecs.c5.8xlarge|32|64.0|10.0|200万|8|8|20|
+|ecs.c5.16xlarge|64|128.0|20.0|400万|16|8|20|
 
 **说明：**
 
@@ -388,13 +388,13 @@ ic5的特点如下：
 
 ic5包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:-----------|:----------|:--|:---|-------|
-|ecs.ic5.large|2|2.0|1.0|30|2|2|6|
-|ecs.ic5.xlarge|4|4.0|1.5|50|2|3|10|
-|ecs.ic5.2xlarge|8|8.0|2.5|80|2|4|10|
-|ecs.ic5.3xlarge|12|12.0|4.0|90|4|6|10|
-|ecs.ic5.4xlarge|16|16.0|5.0|100|4|8|20|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|
+|ecs.ic5.large|2|2.0|1.0|30万|2|2|6|
+|ecs.ic5.xlarge|4|4.0|1.5|50万|2|3|10|
+|ecs.ic5.2xlarge|8|8.0|2.5|80万|2|4|10|
+|ecs.ic5.3xlarge|12|12.0|4.0|90万|4|6|10|
+|ecs.ic5.4xlarge|16|16.0|5.0|100万|4|8|20|
 
 **说明：**
 
@@ -424,15 +424,15 @@ sn1ne的特点如下：
 
 sn1ne包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:-----------|:----------|:--|:---|-------|
-|ecs.sn1ne.large|2|4.0|1.0|30|2|2|6|
-|ecs.sn1ne.xlarge|4|8.0|1.5|50|2|3|10|
-|ecs.sn1ne.2xlarge|8|16.0|2.0|100|4|4|10|
-|ecs.sn1ne.3xlarge|12|24.0|2.5|130|4|6|10|
-|ecs.sn1ne.4xlarge|16|32.0|3.0|160|4|8|20|
-|ecs.sn1ne.6xlarge|24|48.0|4.5|200|6|8|20|
-|ecs.sn1ne.8xlarge|32|64.0|6.0|250|8|8|20|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|
+|ecs.sn1ne.large|2|4.0|1.0|30万|2|2|6|
+|ecs.sn1ne.xlarge|4|8.0|1.5|50万|2|3|10|
+|ecs.sn1ne.2xlarge|8|16.0|2.0|100万|4|4|10|
+|ecs.sn1ne.3xlarge|12|24.0|2.5|130万|4|6|10|
+|ecs.sn1ne.4xlarge|16|32.0|3.0|160万|4|8|20|
+|ecs.sn1ne.6xlarge|24|48.0|4.5|200万|6|8|20|
+|ecs.sn1ne.8xlarge|32|64.0|6.0|250万|8|8|20|
 
 **说明：**
 
