--- a/cn.zh-CN/实例/选择实例规格/内存型/内存型.md
+++ b/cn.zh-CN/实例/选择实例规格/内存型/内存型.md
@@ -50,17 +50,17 @@ r7的特点如下：
 
 r7包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|支持vTPM|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|------------|:----------|------|---|:---|-------|---------|------------|
-|ecs.r7.large|2|16.0|突发最高10.0|90|是|2|3|6|突发最高10.0|突发最高6.0|
-|ecs.r7.xlarge|4|32.0|突发最高10.0|100|是|4|4|15|突发最高10.0|突发最高6.0|
-|ecs.r7.2xlarge|8|64.0|突发最高10.0|160|是|8|4|15|突发最高10.0|突发最高6.0|
-|ecs.r7.3xlarge|12|96.0|突发最高10.0|240|是|8|8|15|突发最高10.0|突发最高6.0|
-|ecs.r7.4xlarge|16|128.0|突发最高25.0|300|是|8|8|30|突发最高10.0|突发最高6.0|
-|ecs.r7.6xlarge|24|192.0|突发最高25.0|450|是|12|8|30|10.0|6.0|
-|ecs.r7.8xlarge|32|256.0|突发最高25.0|600|是|16|8|30|15.0|8.0|
-|ecs.r7.16xlarge|64|512.0|32.0|1200|是|32|8|30|30.0|16.0|
-|ecs.r7.32xlarge|128|1024.0|64.0|2400|是|32|15|30|60.0|32.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|支持vTPM|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|------------|:-------|------|---|:---|-------|------|------------|
+|ecs.r7.large|2|16.0|突发最高10.0|90万|是|2|3|6|突发最高10.0万|突发最高6.0|
+|ecs.r7.xlarge|4|32.0|突发最高10.0|100万|是|4|4|15|突发最高10.0万|突发最高6.0|
+|ecs.r7.2xlarge|8|64.0|突发最高10.0|160万|是|8|4|15|突发最高10.0万|突发最高6.0|
+|ecs.r7.3xlarge|12|96.0|突发最高10.0|240万|是|8|8|15|突发最高10.0万|突发最高6.0|
+|ecs.r7.4xlarge|16|128.0|突发最高25.0|300万|是|8|8|30|突发最高10.0万|突发最高6.0|
+|ecs.r7.6xlarge|24|192.0|突发最高25.0|450万|是|12|8|30|10.0万|6.0|
+|ecs.r7.8xlarge|32|256.0|突发最高25.0|600万|是|16|8|30|15.0万|8.0|
+|ecs.r7.16xlarge|64|512.0|32.0|1200万|是|32|8|30|30.0万|16.0|
+|ecs.r7.32xlarge|128|1024.0|64.0|2400万|是|32|15|30|60.0万|32.0|
 
 **说明：**
 
@@ -101,17 +101,17 @@ r7t的特点如下：
 
 r7t包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|含加密内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|支持vTPM|多队列|弹性网卡|单网的私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|----------|------------|:----------|------|---|:---|-------|---------|------------|
-|ecs.r7t.large|2|16.0|8.0|突发最高10.0|90|是|2|3|6|突发最高10.0|突发最高6.0|
-|ecs.r7t.xlarge|4|32.0|16.0|突发最高10.0|100|是|4|4|15|突发最高10.0|突发最高6.0|
-|ecs.r7t.2xlarge|8|64.0|32.0|突发最高10.0|160|是|8|4|15|突发最高10.0|突发最高6.0|
-|ecs.r7t.3xlarge|12|96.0|48.0|突发最高10.0|240|是|8|8|15|突发最高10.0|突发最高6.0|
-|ecs.r7t.4xlarge|16|128.0|64.0|突发最高25.0|300|是|8|8|30|突发最高10.0|突发最高6.0|
-|ecs.r7t.6xlarge|24|192.0|96.0|突发最高25.0|450|是|12|8|30|10.0|6.0|
-|ecs.r7t.8xlarge|32|256.0|128.0|突发最高25.0|600|是|16|8|30|15.0|8.0|
-|ecs.r7t.16xlarge|64|512.0|256.0|32.0|1200|是|32|8|30|30.0|16.0|
-|ecs.r7t.32xlarge|128|1024.0|512.0|64.0|2400|是|32|15|30|60.0|32.0|
+|实例规格|vCPU|内存（GiB）|含加密内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|支持vTPM|多队列|弹性网卡|单网的私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|----------|------------|:-------|------|---|:---|-------|------|------------|
+|ecs.r7t.large|2|16.0|8.0|突发最高10.0|90万|是|2|3|6|突发最高10.0万|突发最高6.0|
+|ecs.r7t.xlarge|4|32.0|16.0|突发最高10.0|100万|是|4|4|15|突发最高10.0万|突发最高6.0|
+|ecs.r7t.2xlarge|8|64.0|32.0|突发最高10.0|160万|是|8|4|15|突发最高10.0万|突发最高6.0|
+|ecs.r7t.3xlarge|12|96.0|48.0|突发最高10.0|240万|是|8|8|15|突发最高10.0万|突发最高6.0|
+|ecs.r7t.4xlarge|16|128.0|64.0|突发最高25.0|300万|是|8|8|30|突发最高10.0万|突发最高6.0|
+|ecs.r7t.6xlarge|24|192.0|96.0|突发最高25.0|450万|是|12|8|30|10.0万|6.0|
+|ecs.r7t.8xlarge|32|256.0|128.0|突发最高25.0|600万|是|16|8|30|15.0万|8.0|
+|ecs.r7t.16xlarge|64|512.0|256.0|32.0|1200万|是|32|8|30|30.0万|16.0|
+|ecs.r7t.32xlarge|128|1024.0|512.0|64.0|2400万|是|32|15|30|60.0万|32.0|
 
 **说明：**
 
@@ -156,17 +156,17 @@ re6p的特点如下：
 
 re6p包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|持久内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|多队列|弹性网卡|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|---------|--------------|--------------|:----------|------|---|:---|---------|------------|
-|ecs.re6p.large|2|8.0|31.5|1.0|3.0|30|最高25|2|2|1.0|1.0|
-|ecs.re6p.xlarge|4|16.0|63.0|1.5|5.0|50|最高25|4|3|2.0|1.5|
-|ecs.re6p.2xlarge|8|32.0|126.0|2.5|10.0|80|最高25|8|4|2.5|2.0|
-|ecs.re6p.13xlarge|52|192.0|756.0|12.5|无|300|90|32|7|10.0|8.0|
-|ecs.re6p.26xlarge|104|384.0|1512.0|25.0|无|600|180|32|15|20.0|16,0|
-|ecs.re6p-redis.large|2|8.0|31.5|1.0|3.0|30|最高25|2|2|1.0|1.0|
-|ecs.re6p-redis.xlarge|4|16.0|63.0|1.5|5.0|50|最高25|4|3|2.0|1.5|
-|ecs.re6p-redis.2xlarge|8|32.0|126.0|2.5|10.0|80|最高25|8|4|2.5|2.0|
-|ecs.re6p-redis.13xlarge|52|192.0|756.0|12.5|无|300|90|32|7|10.0|8.0|
+|实例规格|vCPU|内存（GiB）|持久内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|---------|--------------|--------------|:-------|---|---|:---|------|------------|
+|ecs.re6p.large|2|8.0|31.5|1.0|3.0|30万|最高25万|2|2|1.0万|1.0|
+|ecs.re6p.xlarge|4|16.0|63.0|1.5|5.0|50万|最高25万|4|3|2.0万|1.5|
+|ecs.re6p.2xlarge|8|32.0|126.0|2.5|10.0|80万|最高25万|8|4|2.5万|2.0|
+|ecs.re6p.13xlarge|52|192.0|756.0|12.5|无|300万|90万|32|7|10.0万|8.0|
+|ecs.re6p.26xlarge|104|384.0|1512.0|25.0|无|600万|180万|32|15|20.0万|16,0|
+|ecs.re6p-redis.large|2|8.0|31.5|1.0|3.0|30万|最高25万|2|2|1.0万|1.0|
+|ecs.re6p-redis.xlarge|4|16.0|63.0|1.5|5.0|50万|最高25万|4|3|2.0万|1.5|
+|ecs.re6p-redis.2xlarge|8|32.0|126.0|2.5|10.0|80万|最高25万|8|4|2.5万|2.0|
+|ecs.re6p-redis.13xlarge|52|192.0|756.0|12.5|无|300万|90万|32|7|10.0万|8.0|
 
 **说明：**
 
@@ -205,16 +205,16 @@ r6a的特点如下：
 
 r6a包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|弹性网卡|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|--------------|--------------|:----------|:---|---------|------------|
-|ecs.r6a.large|2|16.0|1.0|10.0|90|2|1.25|1.0|
-|ecs.r6a.xlarge|4|32.0|1.5|10.0|100|3|2.0|1.5|
-|ecs.r6a.2xlarge|8|64.0|2.5|10.0|160|4|3.0|2.0|
-|ecs.r6a.4xlarge|16|128.0|5.0|10.0|200|8|6.0|3.0|
-|ecs.r6a.8xlarge|32|256.0|8.0|10.0|300|7|7.5|4,0|
-|ecs.r6a.16xlarge|64|512.0|16.0|无|600|8|15.0|8.0|
-|ecs.r6a.32xlarge|128|1024.0|32.0|无|1200|15|30.0|16.0|
-|ecs.r6a.64xlarge|256|2048.0|64.0|无|2400|15|60.0|32.0|
+|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|弹性网卡|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|--------------|--------------|:-------|:---|------|------------|
+|ecs.r6a.large|2|16.0|1.0|10.0|90万|2|1.25万|1.0|
+|ecs.r6a.xlarge|4|32.0|1.5|10.0|100万|3|2.0万|1.5|
+|ecs.r6a.2xlarge|8|64.0|2.5|10.0|160万|4|3.0万|2.0|
+|ecs.r6a.4xlarge|16|128.0|5.0|10.0|200万|8|6.0万|3.0|
+|ecs.r6a.8xlarge|32|256.0|8.0|10.0|300万|7|7.5万|4,0|
+|ecs.r6a.16xlarge|64|512.0|16.0|无|600万|8|15.0万|8.0|
+|ecs.r6a.32xlarge|128|1024.0|32.0|无|1200万|15|30.0万|16.0|
+|ecs.r6a.64xlarge|256|2048.0|64.0|无|2400万|15|60.0万|32.0|
 
 **说明：**
 
@@ -254,15 +254,15 @@ r6e的特点如下：
 
 r6e包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|------------|:----------|------|:--|:---|-------|---------|------------|
-|ecs.r6e.large|2|16.0|突发最高10.0|90|最高25|2|3|6|2.0|1.0|
-|ecs.r6e.xlarge|4|32.0|突发最高10.0|100|最高25|4|4|15|4.0|1.5|
-|ecs.r6e.2xlarge|8|64.0|突发最高10.0|160|最高25|8|4|15|5.0|2.0|
-|ecs.r6e.4xlarge|16|128.0|突发最高10.0|300|30|8|8|30|8.0|3.0|
-|ecs.r6e.8xlarge|32|256.0|10.0|600|60|16|8|30|15.0|5.0|
-|ecs.r6e.13xlarge|52|384.0|16.0|900|90|32|7|30|24.0|8.0|
-|ecs.r6e.26xlarge|104|768.0|32.0|2400|180|32|15|30|48.0|16.0|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.r6e.large|2|16.0|突发最高10.0|90万|最高25万|2|3|6|2.0万|1.0|
+|ecs.r6e.xlarge|4|32.0|突发最高10.0|100万|最高25万|4|4|15|4.0万|1.5|
+|ecs.r6e.2xlarge|8|64.0|突发最高10.0|160万|最高25万|8|4|15|5.0万|2.0|
+|ecs.r6e.4xlarge|16|128.0|突发最高10.0|300万|30万|8|8|30|8.0万|3.0|
+|ecs.r6e.8xlarge|32|256.0|10.0|600万|60万|16|8|30|15.0万|5.0|
+|ecs.r6e.13xlarge|52|384.0|16.0|900万|90万|32|7|30|24.0万|8.0|
+|ecs.r6e.26xlarge|104|768.0|32.0|2400万|180万|32|15|30|48.0万|16.0|
 
 **说明：**
 
@@ -305,17 +305,17 @@ r6的特点如下：
 
 r6包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS（万）|连接数（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-------------|--------------|:----------|------|:--|:---|-------|---------|------------|
-|ecs.r6.large|2|16.0|1.0|3.0|30|最高25|2|2|6|1.0|1|
-|ecs.r6.xlarge|4|32.0|1.5|5.0|50|最高25|4|3|10|2.0|1.5|
-|ecs.r6.2xlarge|8|64.0|2.5|8.0|80|最高25|8|4|10|2.5|2|
-|ecs.r6.3xlarge|12|96.0|4.0|10.0|90|最高25|8|6|10|3.0|2.5|
-|ecs.r6.4xlarge|16|128.0|5.0|10.0|100|30|8|8|20|4.0|3|
-|ecs.r6.6xlarge|24|192.0|7.5|10.0|150|45|12|8|20|5.0|4|
-|ecs.r6.8xlarge|32|256.0|10.0|无|200|60|16|8|20|6.0|5|
-|ecs.r6.13xlarge|52|384.0|12.5|无|300|90|32|7|20|10.0|8|
-|ecs.r6.26xlarge|104|768.0|25.0|无|600|180|32|15|20|20.0|16|
+|实例规格|vCPU|内存（GiB）|网络基础带宽（Gbit/s）|网络突发带宽（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-------------|--------------|:-------|---|:--|:---|-------|------|------------|
+|ecs.r6.large|2|16.0|1.0|3.0|30万|最高25万|2|2|6|1.0万|1|
+|ecs.r6.xlarge|4|32.0|1.5|5.0|50万|最高25万|4|3|10|2.0万|1.5|
+|ecs.r6.2xlarge|8|64.0|2.5|8.0|80万|最高25万|8|4|10|2.5万|2|
+|ecs.r6.3xlarge|12|96.0|4.0|10.0|90万|最高25万|8|6|10|3.0万|2.5|
+|ecs.r6.4xlarge|16|128.0|5.0|10.0|100万|30万|8|8|20|4.0万|3|
+|ecs.r6.6xlarge|24|192.0|7.5|10.0|150万|45万|12|8|20|5.0万|4|
+|ecs.r6.8xlarge|32|256.0|10.0|无|200万|60万|16|8|20|6.0万|5|
+|ecs.r6.13xlarge|52|384.0|12.5|无|300万|90万|32|7|20|10.0万|8|
+|ecs.r6.26xlarge|104|768.0|25.0|无|600万|180万|32|15|20|20.0万|16|
 
 **说明：**
 
@@ -342,11 +342,11 @@ re6的特点如下：
 
 re6包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|云盘IOPS（万）|云盘带宽（Gbit/s）|
-|:---|:---|:------|:-----------|:----------|:--|:---|-------|---------|------------|
-|ecs.re6.13xlarge|52|768.0|10.0|180|16|7|20|5.0|4|
-|ecs.re6.26xlarge|104|1536.0|16.0|300|32|7|20|10.0|8|
-|ecs.re6.52xlarge|208|3072.0|32.0|600|32|15|20|20.0|16|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
+|ecs.re6.13xlarge|52|768.0|10.0|180万|16|7|20|5.0万|4|
+|ecs.re6.26xlarge|104|1536.0|16.0|300万|32|7|20|10.0万|8|
+|ecs.re6.52xlarge|208|3072.0|32.0|600万|32|15|20|20.0万|16|
 
 **说明：**
 
@@ -378,16 +378,16 @@ r5的特点如下：
 
 r5包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:-----------|:----------|:--|:---|-------|
-|ecs.r5.large|2|16.0|1.0|30|2|2|6|
-|ecs.r5.xlarge|4|32.0|1.5|50|2|3|10|
-|ecs.r5.2xlarge|8|64.0|2.5|80|2|4|10|
-|ecs.r5.3xlarge|12|96.0|4.0|90|4|6|10|
-|ecs.r5.4xlarge|16|128.0|5.0|100|4|8|20|
-|ecs.r5.6xlarge|24|192.0|7.5|150|6|8|20|
-|ecs.r5.8xlarge|32|256.0|10.0|200|8|8|20|
-|ecs.r5.16xlarge|64|512.0|20.0|400|16|8|20|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|
+|ecs.r5.large|2|16.0|1.0|30万|2|2|6|
+|ecs.r5.xlarge|4|32.0|1.5|50万|2|3|10|
+|ecs.r5.2xlarge|8|64.0|2.5|80万|2|4|10|
+|ecs.r5.3xlarge|12|96.0|4.0|90万|4|6|10|
+|ecs.r5.4xlarge|16|128.0|5.0|100万|4|8|20|
+|ecs.r5.6xlarge|24|192.0|7.5|150万|6|8|20|
+|ecs.r5.8xlarge|32|256.0|10.0|200万|8|8|20|
+|ecs.r5.16xlarge|64|512.0|20.0|400万|16|8|20|
 
 **说明：**
 
@@ -415,11 +415,11 @@ re4的特点如下：
 
 re4包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:-----------|:----------|:--|:---|-------|
-|ecs.re4.10xlarge|40|480.0|8.0|100|8|4|10|
-|ecs.re4.20xlarge|80|960.0|15.0|200|16|8|20|
-|ecs.re4.40xlarge|160|1920.0|30.0|450|16|8|20|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|
+|ecs.re4.10xlarge|40|480.0|8.0|100万|8|4|10|
+|ecs.re4.20xlarge|80|960.0|15.0|200万|16|8|20|
+|ecs.re4.40xlarge|160|1920.0|30.0|450万|16|8|20|
 
 **说明：**
 
@@ -446,9 +446,9 @@ re4e的特点如下：
 
 re4e包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:-----------|:----------|:--|:---|-------|
-|ecs.re4e.40xlarge|160|3840.0|30.0|450|16|15|20|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|
+|ecs.re4e.40xlarge|160|3840.0|30.0|450万|16|15|20|
 
 **说明：**
 
@@ -477,16 +477,16 @@ se1ne的特点如下：
 
 se1ne包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:-----------|:----------|:--|:---|-------|
-|ecs.se1ne.large|2|16.0|1.0|30|2|2|6|
-|ecs.se1ne.xlarge|4|32.0|1.5|50|2|3|10|
-|ecs.se1ne.2xlarge|8|64.0|2.0|100|4|4|10|
-|ecs.se1ne.3xlarge|12|96.0|2.5|130|4|6|10|
-|ecs.se1ne.4xlarge|16|128.0|3.0|160|4|8|20|
-|ecs.se1ne.6xlarge|24|192.0|4.5|200|6|8|20|
-|ecs.se1ne.8xlarge|32|256.0|6.0|250|8|8|20|
-|ecs.se1ne.14xlarge|56|480.0|10.0|450|14|8|20|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|
+|ecs.se1ne.large|2|16.0|1.0|30万|2|2|6|
+|ecs.se1ne.xlarge|4|32.0|1.5|50万|2|3|10|
+|ecs.se1ne.2xlarge|8|64.0|2.0|100万|4|4|10|
+|ecs.se1ne.3xlarge|12|96.0|2.5|130万|4|6|10|
+|ecs.se1ne.4xlarge|16|128.0|3.0|160万|4|8|20|
+|ecs.se1ne.6xlarge|24|192.0|4.5|200万|6|8|20|
+|ecs.se1ne.8xlarge|32|256.0|6.0|250万|8|8|20|
+|ecs.se1ne.14xlarge|56|480.0|10.0|450万|14|8|20|
 
 **说明：**
 
@@ -512,14 +512,14 @@ se1的特点如下：
 
 se1包括的实例规格及指标数据如下表所示。
 
-|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS（万）|多队列|弹性网卡|单网卡私有IP|
-|:---|:---|:------|:-----------|:----------|:--|:---|-------|
-|ecs.se1.large|2|16.0|0.5|10|1|2|6|
-|ecs.se1.xlarge|4|32.0|0.8|20|1|3|10|
-|ecs.se1.2xlarge|8|64.0|1.5|40|1|4|10|
-|ecs.se1.4xlarge|16|128.0|3.0|50|2|8|20|
-|ecs.se1.8xlarge|32|256.0|6.0|80|3|8|20|
-|ecs.se1.14xlarge|56|480.0|10.0|120|4|8|20|
+|实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
+|:---|:---|:------|:-----------|:-------|:--|:---|-------|
+|ecs.se1.large|2|16.0|0.5|10万|1|2|6|
+|ecs.se1.xlarge|4|32.0|0.8|20万|1|3|10|
+|ecs.se1.2xlarge|8|64.0|1.5|40万|1|4|10|
+|ecs.se1.4xlarge|16|128.0|3.0|50万|2|8|20|
+|ecs.se1.8xlarge|32|256.0|6.0|80万|3|8|20|
+|ecs.se1.14xlarge|56|480.0|10.0|120万|4|8|20|
 
 **说明：**
 
