--- a/intl.zh-CN/运维与监控/云助手/使用云助手/执行命令.md
+++ b/intl.zh-CN/运维与监控/云助手/使用云助手/执行命令.md
@@ -13,7 +13,7 @@ keyword: [云助手, 远程命令, 运维插件, 阿里云, ecs]
 
 -   调用API执行命令时最多可以选择50台实例。
 -   通过ECS管理控制台一次执行命令操作的实例数量大于50台时，系统会自动分批执行命令。
--   在一个阿里云地域下，您每天最多能执行5000次云助手命令，配额随您的云服务器使用情况可能会增加。
+-   在一个阿里云地域下，您每天最多能执行5000次云助手命令，配额随您的云服务器使用情况可能会增加。关于如何查询配额，请参见[步骤一：查看资源配额](/intl.zh-CN/标签与资源/资源/权益配额/查看和提升资源配额.md)。
 
     **说明：** 您也可以调用API DescribeAccountAttributes，将参数AttributeName.N设置为max-axt-invocation-daily，查询一个地域下单天能运行的云助手命令次数上限。
 
@@ -26,7 +26,7 @@ keyword: [云助手, 远程命令, 运维插件, 阿里云, ecs]
 
 3.  在顶部菜单栏左上角处，选择地域。
 
-4.  找到需要执行的云助手命令，在右侧**操作**列中，单击**执行**。
+4.  找到目标云助手命令，在右侧**操作**列中，单击**执行**。
 
 5.  在**执行命令**面板中，配置执行参数。
 
@@ -37,10 +37,13 @@ keyword: [云助手, 远程命令, 运维插件, 阿里云, ecs]
         |名称|描述|
         |--|--|
         |命令内容|单击**查看命令内容**确认命令内容。|
+        |执行计划|选择命令执行时间。        -   **立即执行**：单击**执行**或**执行并保存**后，立即执行命令。
+        -   **系统下一次启动后**：单击**执行**或**执行并保存**后，实例下次启动时执行命令。
+        -   **系统每次启动后**：单击**执行**或**执行并保存**后，实例每次启动时执行命令。 |
         |执行用户|在ECS实例中执行命令的用户名称。使用最小权限执行命令是权限管理的最佳实践，建议您以普通用户身份执行云助手命令。更多信息，请参见[设置普通用户执行云助手命令](/intl.zh-CN/运维与监控/云助手/DevOps自动化运维实践/设置普通用户执行云助手命令.md)。
 
 默认情况下，在Linux实例中以root用户执行命令，在Windows实例中以System用户执行命令。 |
-        |密码名称|选择托管在运维编排服务中的执行用户密码名称。仅在Windows实例中使用非System用户执行命令时，需要设置此参数。如果您没有将执行用户的密码托管在运维编排服务，需要在运维编排服务的参数仓库中创建并托管密码。更多信息，请参见[创建加密参数]()和[配置Windows实例的普通用户执行云助手命令](/intl.zh-CN/运维与监控/云助手/DevOps自动化运维实践/设置普通用户执行云助手命令.md)。 |
+        |密码名称|选择托管在运维编排服务中的执行用户密码名称。仅在Windows实例中使用非System用户执行命令时，需要设置此参数。如果您没有将执行用户的密码托管在运维编排服务，需要在运维编排服务的参数仓库中创建并托管密码。更多信息，请参见[创建加密参数]()和[配置Windows实例的普通用户执行云助手命令](/intl.zh-CN/运维与监控/云助手/DevOps自动化运维实践/设置普通用户执行云助手命令.mdsection_rgk_3gp_gdi)。 |
         |命令参数|在**命令参数**处的文本框内，填写命令中自定义参数的取值。参数取值无数据类型格式限制。如果自定义参数在当前调用中无需传入取值，您可以使用空字符串代替。**说明：** 如果您在新建命令时未选择**使用参数**，执行命令时不会出现**命令参数**的配置。 |
 
     2.  在**选择实例**区域，选中一台或多台目标实例。
@@ -57,6 +60,8 @@ keyword: [云助手, 远程命令, 运维插件, 阿里云, ecs]
     ```
     aliyun ecs StartInstance --InstanceId 'i-bp1f4f6o8lv0wqof****' 
     ```
+
+    **说明：** 半角单引号（''）内为参数的示例取值，您需要根据实际情况修改。
 
     更多信息，请参见[StartInstance](/intl.zh-CN/API参考/实例/StartInstance.md)。
 
